--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,9 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
@@ -25,8 +19,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="//fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
     <!--//fonts-->
 
+
 </head>
 <body>
+
+
 <!--banner start here-->
 <div class="banner-w3ls inner-banner-agileits" id="home">
     <div class="container">
@@ -91,18 +88,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="col-md-8 login-form-w3-agile">
             <form action="Login" method="post">
+                <input type="hidden" name="checktf" id="checktf" value="0">
                 <div class="w3_form_body_grid">
                     <span>用户名</span>
-                    <input type="text" name="number" placeholder="UserName" required="">
+                    <input type="text" id="lname" name="number" placeholder="UserName" required="">
                 </div>
                 <div class="w3_form_body_grid">
                     <span>密码</span>
-                    <input type="password" name="pwd" placeholder="Password" required="">
+                    <input type="password" id="lpwd" name="pwd" placeholder="Password" required="">
                 </div>
                 <div class="agile_remember">
                     <div class="agile_remember_left">
                         <div class="check">
-                            <label class="checkbox"><input type="checkbox" name="checkbox" checked><i> </i>remember me</label>
+                            <label class="checkbox"><input id="cktf" type="checkbox" name="checkbox" onclick="pdck()" checked><i> </i>remember me</label>
                         </div>
                     </div>
                     <div class="agile_remember_right">
@@ -213,6 +211,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- js -->
 <script type='text/javascript' src='../js/jquery-2.2.3.min.js'></script>
 
+<script type="text/javascript">
+    function GetCookie(name) {
+        var ck = document.cookie;
+        var exp1 = new RegExp(name + "=.*?(?=;|$)");
+        var mch = ck.match(exp1);
+        return mch ? unescape(mch[0].substring(name.length + 1)) : null;
+    }
+
+    let name = GetCookie("lName");
+    let pwd = GetCookie("lPwd");
+    $("#lname").val(name);
+    $("#lpwd").val(pwd);
+
+
+    function pdck(){
+        let ck = $("#cktf");
+        let isChecked = ck.prop("checked");
+        alert(isChecked);
+        if(isChecked){
+            $("#checktf").val("1")
+        }else {
+            $("#checktf").val("0")
+        }
+    }
+
+
+</script>
 
 
 <script src="../js/SmoothScroll.min.js"></script>
