--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -91,11 +91,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <input type="hidden" name="checktf" id="checktf" value="1">
                 <div class="w3_form_body_grid">
                     <span>用户名/电话</span>
-                    <input type="text" id="lname" name="number" placeholder="请输入用户名/电话号" required="">
+                    <input type="text" id="lname" name="number" placeholder="请输入用户名/电话号" maxlength="15" required>
                 </div>
                 <div class="w3_form_body_grid">
                     <span>密码</span>
-                    <input type="password" id="lpwd" name="pwd" placeholder="请输入密码" required="">
+                    <input type="password" id="lpwd" name="pwd" placeholder="请输入密码" maxlength="15" required>
                 </div>
                 <div class="agile_remember">
                     <div class="agile_remember_left">
