--- a/src/main/resources/templates/matches.html
+++ b/src/main/resources/templates/matches.html
@@ -17,10 +17,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/font-awesome.css" rel="stylesheet"> 
-<link href="css/easy-responsive-tabs.css" rel='stylesheet' type='text/css'/>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../css/font-awesome.css" rel="stylesheet">
+<link href="../css/easy-responsive-tabs.css" rel='stylesheet' type='text/css'/>
+<link href=".../css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!--fonts-->
 <link href="//fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
@@ -250,9 +250,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--/footer -->
 
 <!-- js -->
-<script type='text/javascript' src='js/jquery-2.2.3.min.js'></script>
+<script type='text/javascript' src='../js/jquery-2.2.3.min.js'></script>
 <!-- script for responsive tabs -->						
-<script src="js/easy-responsive-tabs.js"></script>
+<script src="../js/easy-responsive-tabs.js"></script>
 <script>
 $(document).ready(function () {
 $('#horizontalTab').easyResponsiveTabs({
@@ -278,7 +278,7 @@ fit: true
 <!-- script for responsive tabs -->		
 
 
-<script src="js/SmoothScroll.min.js"></script>
+<script src="../js/SmoothScroll.min.js"></script>
 <!-- smooth scrolling -->
 	<script type="text/javascript">
 		$(document).ready(function() {
@@ -299,7 +299,7 @@ fit: true
 <!-- //smooth scrolling -->
 	<!-- //for-Clients -->
 	<!-- start-smoth-scrolling -->
-<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="../js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
@@ -310,7 +310,7 @@ fit: true
 	});
 </script>
 <!-- start-smoth-scrolling -->
-<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
+<script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
 
 </div>
 </body>
