--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -361,7 +361,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="view second-effect">
 						<img src="../images/g2.jpg" alt="" class="img-responsive" />
 						<div class="mask">
-							<p>Abelard <i class="fa fa-heart-o" aria-hidden="true"></i> Heloise</p>
+							<p>Abelards <i class="fa fa-heart-o" aria-hidden="true"></i> Heloise</p>
 						</div>
 					</div>
 				</a>
