--- a/src/main/resources/templates/single1.html
+++ b/src/main/resources/templates/single1.html
@@ -202,7 +202,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<div class="sim-button button12"><a href="contact.html">联系我们</a></div>
-				<h2>我们致力于提供卓越的服务.</h2>
+				<h2>我们致力于提供卓越的服务</h2>
 			</div>
 		</div>
 		<!-- footer-button-info -->
