--- a/src/main/resources/templates/single1.html
+++ b/src/main/resources/templates/single1.html
@@ -90,7 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 		<div class="tittle-agileinfo">
 			<h3 th:text="${l.truename}"></h3>
-			<a href="#">屏蔽此人</a>&nbsp;&nbsp;&nbsp;<a href="../dispose/listTypes">举报此人</a>&nbsp;&nbsp;&nbsp;<a href="#" style="color: red;">关注</a>
+			<a href="#">屏蔽此人</a>&nbsp;&nbsp;&nbsp;<a href="../basic_message/findAllByIdt">举报此人</a>&nbsp;&nbsp;&nbsp;<a href="#" style="color: red;">关注</a>
 		</div>
 		<div class="matches-main-agileinfo">
 			<!--<div class="col-md-6 profile1">
